--- a/main.css
+++ b/main.css
@@ -1,16 +1,24 @@
 html {
     /* font-size: 10px; px means "pixels": the base font size is now 10 pixels high  */
-    font-family: 'Roboto', sans-serif;
     background-color: rgb(219, 212, 212); 
   }
 
-h1 {
-    font-size: 60px;
+body {
     text-align: center;
+    }
+
+h1 {
+    font-family: 'Yusei Magic', sans-serif;
+    font-size: 60px;
   }
-  
+
 p {
+    font-family: 'Roboto', sans-serif;
     font-size: 20px;
-    text-align: left;  
-    width:600px;
+   /* width:600px; */
+}
+
+h2 {
+    font-family: 'Yusei Magic', sans-serif;
+    font-size: 40px;
   }
