--- a/main.css
+++ b/main.css
@@ -22,3 +22,22 @@ h2 {
     font-family: 'Yusei Magic', sans-serif;
     font-size: 40px;
   }
+
+h3 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 30px;
+    text-align: right;
+    border: black;
+}
+
+h4 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 30px;
+    border: black;
+}
+
+a {
+    font-family: 'Roboto', sans-serif;
+    font-size: 30px;
+    border: black;
+}
